Traefik/traefik-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: hml
spec:
  selector:
    app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
